ui: 优化界面与异步加载性能